<resources>
    <string name="app_name">Exoesqueleto</string>
    <string name="facebook_app_id">483272935681198</string>
    <string name="fb_login_protocol_scheme">fb483272935681198</string>
    <string name="indicaciones_olvide_mi_contraseña">Para recuperar su contraseña debera dirigirse a la bandeja de entrada de su proveedor de correo electronico y buscar un correo con remitente de Asistencia o (en su defecto), de la dirección asistencia@proyectoaexoesqueleto.firebaseapp.com
Si no lo encuentra, busque en el apartado del correo no deseado.</string>
    <string name="terminos">Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos.
        Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos.
        Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos.
        Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos.
        Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos.
        Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos.
        Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos. Ejemplo de terminos.
    </string>
    <string name="aceptar">Aceptar</string>
    <string name="no_acepto">No acepto</string>
    <string name="condicion_terminos">Si no acepta no podrá registrarse ni usar la aplicación</string>
    <string name="correo">Correo</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="o_usa_tu_cuenta_de">o usa tu cuenta de:</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar">Iniciar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="restablece_contraseña">Introduzca su correo para restablecer su contraseña</string>
    <string name="error_introducir_email">Debe introducir su correo</string>
    <string name="error_correo_invalido">Debe introducir un correo valido</string>
    <string name="error_introducir_pass">Debe introducir su contraseña</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="registrar">Registrar</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="no_soy_un_robot">No soy un robot</string>
    <string name="todo">imagen</string>
    <string name="a_n_no_tienes_una_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="todo_listo">todo listo</string>
    <string name="espere_un_momento">espere un momento</string>
    <string name="salir">Salir</string>
    <string name="intentar_de_nuevo">Intentar de nuevo</string>
    <string name="algo_sali_mal">algo salió mal</string>
    <string name="condición_contraseña">La contraseña debe tener minimo 8 caracteres, maximo 15, al menos una letra mayúscula, al menos una letra minuscula, al menos un dígito, no espacios en blanco y al menos 1 caracter especial</string>
    <string name="error_pass_no_coincide">Las contraseñas deben coincidir</string>
    <string name="condicion_casillas">Debe verificar que no es un robot y leer los terminos y condiciones</string>
    <string name="bienvenido_otra_vez">Bienvenido otra vez</string>
    <string name="example">example</string>
    <string name="categor_a">Categoría</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="inicio">Inicio</string>
    <string name="profile">Perfil</string>
    <string name="indicacion_para_registro">Para completar tu registro debes proporcionarnos tus datos.</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="datos_personales">Datos personales</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="pa_s_de_origen">País</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="sexo">Sexo</string>
    <string name="fto_de_perf_l">Foto de perfíl</string>
    <string name="guardar">Guardar</string>
    <string name="datos_de_usuario">Datos de usuario</string>
    <string name="doctor">Doctor</string>
    <string name="paciente">Paciente</string>
    <string name="usted_es_un">Usted es</string>
    <string name="verificaci_n_por_correo">Verificación por correo</string>
    <string name="error_image_perfil">Seleccione su imagen de perfil</string>
    <string name="error_campo">Olvidaste llenar este campo</string>
    <string name="take_photo">Tomar una foto</string>
    <string name="chose_from_gallery">Elegir una de la galeria</string>
    <string name="cancelar">Cancelar</string>
    <string name="registro_exitoso">Registro exitoso</string>
    <string name="try_again">Intente más tarde.</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="estudio">Estudio en</string>
    <string name="telefono">Telefono</string>
    <string name="celular">Celular</string>
    <string name="direcci_n">Dirección</string>
    <string name="introduzca_lo_que_se_le_pide">Introduzca lo que se le pide</string>
    <string name="description">Descripción</string>
    <string name="operacion_exitosa">Operación exitosa</string>
    <string name="messages">Messages</string>
    <string name="chats">Chats</string>
    <string name="work">work</string>
    <string name="proceedings">proceedings</string>
    <string name="buscar">Buscar</string>
    <string name="agregar">Agregar</string>
    <string name="more_info">Da click para ver mas informacion</string>
    <string name="un_admin">Un administrador ponerse en contacto contigo.</string>
    <string name="un_fisioterapeuta">Un fisioterapeuta quiere ponerse en contacto contigo.</string>
    <string name="do_you_know_this_person">¿Conoces a esta persona?</string>
    <string name="aa">Aa</string>
    <string name="habla_con_un">Ya puedes hablar con tu pasiente</string>
    <string name="request_accept">Han aceptado tu solicitud</string>
    <string name="ver_contacto">Ver contacto</string>
    <string name="vaciar_el_chat">Vaciar el chat</string>
    <string name="contacto">Contacto</string>
    <string name="eliminar_de_mi_lista_de_contactos">Eliminar de mi lista de contactos</string>
    <string name="reportar">Reportar</string>
    <string name="llamar">Llamar</string>
    <string name="escribir_un_mail">Escribir un mail</string>
    <string name="cerrar">Cerrar</string>
    <string name="opciones">Opciones</string>
    <string name="complete">Completado</string>
    <string name="advertencia">Advertencia</string>
    <string name="confirmacion_contacto">¿Estás seguro de borrar de tu lista de contactos?</string>
    <string name="cuenta_sin_verificar">Cuenta sin verificar</string>
    <string name="se_acabo_el_tratamiento">Ya no podemos darle seguimiento</string>
    <string name="poca_profecionalidad">Poca profesionalidad y mal uso de mi información</string>
    <string name="reportar_user">¿Desea reportar al usuario?</string>
    <string name="no">No</string>
    <string name="click_more_info">Da click para ver mas informacion</string>
    <string name="report_message">Reporte de infracción</string>
    <string name="please_write">Por favor relate el motivo de su reporte</string>
    <string name="de_su_lista_de_contactos">\" te a eliminado de su lista de contactos\"</string>
    <string name="si">Si</string>
    <string name="ver">Ver</string>
    <string name="marcar_como_visto">Marcar como visto</string>
    <string name="eliminar">Eliminar</string>
    <string name="ignorar">Ignorar</string>
    <string name="dispositivos_bluetooth_disponibles">Dispositivos bluetooth disponibles</string>
    <string name="buscar_dispositivos">Buscar dispositivos</string>
    <string name="no_bluetooth">Este celular no tiene bluettoh</string>
    <string name="controles_del_exoesqueleto">Controles del exoesqueleto</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="detener">Detener exoesqueleto</string>
    <string name="desconectar">Desconectar del dispositivo</string>
    <string name="caminar">Caminar</string>
    <string name="ejercitar_piernas">Ejercitar piernas</string>
    <string name="levantar_y_bajar_la_pierna_izquierda">Levantar y bajar la pierna izquierda</string>
    <string name="levantar_y_bajar_la_pierna_derecha">Levantar y bajar la pierna derecha</string>
    <string name="connection_failed">La conexión falló. Verifique que el exoesqueleto esté encendido.</string>
    <string name="conectar">Conectar</string>
    <string name="advertencia_bluetooth">Debes establecer una conexión via bluetooth con el exoesqueleto.</string>
    <string name="play">Play</string>
    <string name="pausar">Pausar</string>
    <string name="walk_title2">Caminar determinados pasos</string>
    <string name="walk_indication2">Desplaza el piker para seleccionar la cantidad de pasos a dar y pulse el boton Caminar</string>
    <string name="comenzar">Comenzar</string>
    <string name="walk_title">Caminar por tiempo</string>
    <string name="ver_tareas">Ver tareas</string>
    <string name="help">Ayuda</string>
    <string name="advertencia_click_flotating_buttons">Solo puedes usar estos botones cuando estás usando el exoesqueleto</string>
    <string name="desplaza_el_picker">Desplaza el picker para seleccionar el tiempo que pasara caminando y pulse el boton Caminar.</string>
    <string name="pasientes">Pacientes</string>
    <string name="selecciona_un_paciente_primero">Selecciona un paciente</string>
    <string name="tareas_realizadas">Tareas realizadas</string>
    <string name="asignar_tareas">Asignar tareas</string>
    <string name="assing">Assign</string>
    <string name="tareas_pendientes">Tareas pendientes</string>
    <string name="walk">Caminar</string>
    <string name="exercise_your_legs">Ejercitar las piernas</string>
    <string name="a_session">Se programo una sesión para </string>
    <string name="walk_less">caminar </string>
    <string name="minutes"> minutos.</string>
    <string name="steps"> pasos.</string>
    <string name="buscar_en_tareas_realizadas_por_fecha">buscar en tareas realizadas por fecha</string>
    <string name="buscar_en_tareas_pendientes_por_fecha">buscar en tareas pendientes por fecha</string>
    <string name="pendientes2">Pendientes</string>
    <string name="no_tiene_acceso">No tiene acceso a esta función</string>
    <string name="image_task">image task</string>
    <string name="send_message">send_message</string>
    <string name="image_profile">image profile</string>
    <string name="button_back">button_back</string>
    <string name="user">User</string>
    <string name="cuenta_verificada">Cuenta verificada</string>
    <string name="error">error</string>
    <string name="go_to_next">go to next</string>
    <string-array name="country_arrays">
        <item>México</item>
        <item>United States</item>
    </string-array>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="descripsi_n">Descripsión</string>
    <string name="usuarios_que_accedieron_recientemente">usuarios que accedieron recientemente</string>
    <string name="delete">delete</string>
    <string name="userd_profile">userd_profile</string>
    <string name="emparejar">Conectar</string>
    <string name="pacientes">Pacientes</string>
    <string name="stop">stop</string>
</resources>