<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/inicio" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message"
        android:title="@string/chats" />

    <item
        android:id="@+id/navigation_paired_device"
        android:icon="@drawable/ic_bluetooth"
        android:title="@string/emparejar" />

    <item
        android:id="@+id/navigation_work"
        android:icon="@drawable/ic_work"
        android:title="@string/pacientes" />

</menu>