<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sing_out"
        android:title="@string/cerrar_sesi_n"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_round_logout_24"
        android:iconTint="@color/white" />

    <item
        android:id="@+id/disconect"
        android:title="@string/desconectar"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_round_bluetooth_disabled_24" />

    <item
        android:id="@+id/stop"
        android:title="@string/stop"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_stop" />

</menu>