<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pasientes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_exoesqueleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecciona_un_paciente_primero"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/id_exoesqueleto"
            tools:itemCount="2"
            tools:listitem="@layout/item_chat" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16sp"
            android:text="@string/paciente"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/text_view_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_nacimiento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_date_title"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            tools:text="@tools:sample/date/ddmmyy" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_date_title" />

        <TextView
            android:id="@+id/text_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textView14"
            tools:text="Gender" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/asignar_tareas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/button_up_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_walk_steps" />

        <Button
            android:id="@+id/button_walk_steps"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="16sp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/walk_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/number_picker"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/button_walk_minutes"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="16sp"
            android:drawableTint="@color/pinkDark"
            android:paddingStart="16sp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:paddingEnd="16sp"
            android:text="@string/walk_title2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button_walk_steps"
            app:layout_constraintTop_toBottomOf="@+id/button_walk_steps"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/button_up_right"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="16sp"
            android:drawableTint="@color/pinkDark"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/levantar_y_bajar_la_pierna_derecha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button_walk_minutes"
            app:layout_constraintTop_toBottomOf="@+id/button_walk_minutes"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/button_up_left"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="16sp"
            android:drawableTint="@color/pinkDark"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:text="@string/levantar_y_bajar_la_pierna_izquierda"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:layout_constraintStart_toStartOf="@+id/button_up_right"
            app:layout_constraintTop_toBottomOf="@+id/button_up_right"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/tareas_realizadas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_up_left" />

        <EditText
            android:id="@+id/text_search_finalise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:drawableEnd="@drawable/ic_search"
            android:drawablePadding="16sp"
            android:hint="@string/buscar_en_tareas_realizadas_por_fecha"
            android:inputType="text"
            android:padding="16sp"
            app:layout_constraintTop_toBottomOf="@+id/textView17"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_search_finalise"
            tools:itemCount="2"
            tools:listitem="@layout/item_work" />

        <TextView
            android:id="@+id/text_view_pending_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/tareas_pendientes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView1" />

        <EditText
            android:id="@+id/text_search_pending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:drawableEnd="@drawable/ic_search"
            android:drawablePadding="16sp"
            android:hint="@string/buscar_en_tareas_pendientes_por_fecha"
            android:inputType="text"
            android:padding="16sp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_pending_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_search_pending"
            tools:itemCount="2"
            tools:listitem="@layout/item_work" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
