<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image_profile_dialog_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_profile_view_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_profile_view_name">

            <ImageView
                android:id="@+id/image_view_profile_view"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:background="@drawable/button_border_pink"
                android:contentDescription="@string/image_profile"
                android:src="@drawable/ic_profile" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_profile_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            app:layout_constraintStart_toEndOf="@+id/card_image_profile_dialog_contact"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/text_profile_view_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            app:layout_constraintStart_toStartOf="@+id/text_profile_view_name"
            app:layout_constraintTop_toBottomOf="@+id/text_profile_view_name" />

        <TextView
            android:id="@+id/text_profile_view_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuenta_verificada"
            app:layout_constraintStart_toStartOf="@+id/text_profile_view_name"
            app:layout_constraintTop_toBottomOf="@+id/text_profile_view_user" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:layout_marginTop="16sp"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/text_profile_view_check"
            tools:ignore="SmallSp"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:contentDescription="@string/todo"
            android:padding="8sp"
            android:src="@drawable/ic_phone_android"
            app:layout_constraintBottom_toBottomOf="@+id/text_profile_view_check"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_profile_view_name"
            app:layout_constraintTop_toTopOf="@+id/text_profile_view_name" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:contentDescription="@string/todo"
            android:padding="8sp"
            android:src="@drawable/ic_mail"
            app:layout_constraintBottom_toBottomOf="@+id/text_profile_view_check"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/text_profile_view_name" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:contentDescription="@string/todo"
            android:padding="8sp"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toBottomOf="@+id/text_profile_view_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/text_profile_view_name" />

        <TextView
            android:id="@+id/text_profile_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:drawablePadding="20sp"
            android:text="@string/correo"
            app:drawableStartCompat="@drawable/ic_mail"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/text_profile_view_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:drawablePadding="20sp"
            android:text="@string/direcci_n"
            app:drawableStartCompat="@drawable/ic_place"
            app:layout_constraintTop_toBottomOf="@+id/text_profile_view_email" />

        <TextView
            android:id="@+id/text_profile_view_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:drawablePadding="20sp"
            android:text="@string/celular"
            app:drawableStartCompat="@drawable/ic_phone_android"
            app:layout_constraintTop_toBottomOf="@+id/text_profile_view_address" />

        <TextView
            android:id="@+id/text_profile_view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:drawablePadding="20sp"
            android:text="@string/telefono"
            app:drawableStartCompat="@drawable/ic_phone"
            app:layout_constraintTop_toBottomOf="@+id/text_profile_view_cell" />

        <TextView
            android:id="@+id/text_profile_view_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:drawablePadding="20sp"
            android:text="@string/estudio"
            app:drawableStartCompat="@drawable/ic_school"
            app:layout_constraintTop_toBottomOf="@+id/text_profile_view_phone" />

        <Button
            android:id="@+id/button_delete"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/eliminar_de_mi_lista_de_contactos"
            app:layout_constraintTop_toBottomOf="@+id/text_profile_view_school" />

        <Button
            android:id="@+id/button_report"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/reportar"
            app:layout_constraintTop_toBottomOf="@+id/button_delete" />

        <Button
            android:id="@+id/button_dimiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/cerrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_report" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>